# citepilot

./: .gitignore  AGENTS.md  LEARNING.md  README.md  vercel.json
01-discovery-strategy/: 01-competitive-analysis.md  02-prd.md  03-user-story-map.md  04-gtm-strategy.md  05-business-model.md
02-design/: 06-design-system.md  07-information-architecture.md  08-wireframes-mockups.md  09-ux-specification.md  DESIGN.md  citepilot-dashboard.html  citepilot-v2.html
03-technical-architecture/: 10-system-architecture.md  11-technology-stack.md  12-api-specification.md  13-database-schema.md  14-ai-nlp-design.md  15-infrastructure-deployment.md  16-security-architecture.md
04-engineering-standards/: 17-engineering-guidelines.md  18-architecture-decision-records.md  19-testing-strategy.md  20-monitoring-observability.md
citepilot-ai/: .env.example  Procfile  pyproject.toml  railway.json
citepilot-ai/src/citepilot_ai/: config.py  main.py
citepilot-ai/src/citepilot_ai/api/v1/: endpoints.py  router.py
citepilot-ai/src/citepilot_ai/models/: schemas.py
citepilot-ai/src/citepilot_ai/services/: citation_extractor.py  crossref_service.py  document_parser.py  export_service.py  llm.py  recency_service.py  report_generator.py  retraction_service.py  uncited_claims_detector.py
citepilot-ai/tests/: test_ai_response_validation.py  test_citepilot_engine.py  test_crossref_service.py  test_document_parser.py  test_empirical_stress.py  test_endpoints.py  test_export_service.py  test_recency_service.py  test_retraction_service.py  test_stress_harness.py  test_uncited_claims.py
(+102 files in other folders)
